objects/Track_History__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>track_history</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FieldHistory__c</fullName>
        <label>FieldHistory</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <label>NewValue</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OldValue__c</fullName>
        <label>OldValue</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Track History</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Track History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Track History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>